--- a/test/testResultsMap.vcxproj
+++ b/test/testResultsMap.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -75,11 +75,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ResultsMap.cpp" />
+    <ClCompile Include="../ResultsMap.cpp" />
     <ClCompile Include="testResultsMap.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ResultsMap.h" />
+    <ClInclude Include="../ResultsMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
