--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-testResultsMap: testResultsMap.cpp ../ResultsMap.h ../ResultsMap.cpp
+testResultsMap: testResultsMap.cpp ../ResultsMap.h ../ResultsMap.cpp ../AnyType.h
 	g++ testResultsMap.cpp ../ResultsMap.cpp -std=c++0x -o testResultsMap
 
 clean:
