Makefile now allows compiler choice

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,7 @@
+CC=g++
+
 testResultsMap: testResultsMap.cpp ../ResultsMap.h ../ResultsMap.cpp ../AnyType.h
-	g++ testResultsMap.cpp ../ResultsMap.cpp -std=c++0x -o testResultsMap
+	$(CC) testResultsMap.cpp ../ResultsMap.cpp -std=c++0x -o testResultsMap
 
 clean:
 	rm testResultsMap
