--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,11 +2,9 @@ CC=g++
 FLAGS=-std=c++0x
 TARGETS := testResultsMap
 
-TARGETS := $(patsubst %,$(TAG)%,$(TARGETS))
-
 all : $(TARGETS)
 
-$(TAG)% : %.cpp ../ResultsMap.h ../AnyType.h ../ResultsMap.cpp
+% : %.cpp ../ResultsMap.h ../AnyType.h ../ResultsMap.cpp
 	$(CC) $< -o $@ $(FLAGS) ../ResultsMap.cpp
 
 clean:
