--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 2.8)
 project(ResultsMap)
 
 add_executable(testResultsMap testResultsMap.cpp ../ResultsMap.cpp)
+add_test(testResultsMap testResultsMap)
