modified makefile to allow for different compilers

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,10 @@
-CC=g++
 FLAGS=-std=c++0x
 TARGETS := testResultsMap
 
 all : $(TARGETS)
 
 % : %.cpp ../ResultsMap.h ../AnyType.h ../ResultsMap.cpp
-	$(CC) $< -o $@ $(FLAGS) ../ResultsMap.cpp
+	$(CXX) $< -o $@ $(FLAGS) ../ResultsMap.cpp
 
 clean:
 	rm -f $(TARGETS)
